@@ -773,19 +773,34 @@
 </div>
 
 #^/baseline_comment
-<tr class="row_comment">
-	<td><div class="result_comment_type"><b>Baseline</b> comment</div></td>
-	<td colspan="5"><div class="result_comment">{_it./baseline/comment/narrative.0.text||}</div></td>
+<tr class="row_comment baseline_comment">
+	<td></td>
+	<td colspan="5">
+		<div class="result_comment_wrap">
+			<div class="result_comment_type"><b>Baseline</b> comment</div>
+			<div class="result_comment">{_it./baseline/comment/narrative.0.text||}</div>
+		</div>
+	</td>
 </tr>
 #^/target_comment
-<tr class="row_comment">
-	<td><div class="result_comment_type"><b>Target</b> comment</div></td>
-	<td colspan="5"><div class="result_comment">{_it./target/comment/narrative.0.text||}</div></td>
+<tr class="row_comment target_comment">
+	<td></td>
+	<td colspan="5">
+		<div class="result_comment_wrap">
+			<div class="result_comment_type"><b>Target</b> comment</div>
+			<div class="result_comment">{_it./target/comment/narrative.0.text||}</div>
+		</div>
+	</td>
 </tr>
 #^/actual_comment
-<tr class="row_comment">
-	<td><div class="result_comment_type"><b>Actual</b> comment</div></td>
-	<td colspan="5"><div class="result_comment">{_it./actual/comment/narrative.0.text||}</div></td>
+<tr class="row_comment actual_comment">
+	<td></td>
+	<td colspan="5">
+		<div class="result_comment_wrap">
+			<div class="result_comment_type"><b>Actual</b> comment</div>
+			<div class="result_comment">{_it./actual/comment/narrative.0.text||}</div>
+		</div>
+	</td>
 </tr>
 
 #^/empty_dimension
