@@ -4,6 +4,8 @@ Fix css for participating-org id alignment
 Display comments for results data
 Update facet value type css
 Update facet separator
+Update result comment layout into tabs
+Update SAVi css
 
 
 Development Portal (2021-08-07 shi)
